Update .gitignore to exclude IDE and temporary files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ Dependencies.toml
 Config.toml
 # the config files used for testing, Uncomment the following line if you want to commit the test config files
 #!**/tests/Config.toml
+
+# ide files
+.idea/
+.vscode/
+
+# temp
+temp/
